// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render when no expenses are present 1`] = `
<div
  className="content-container"
>
  <div
    className="expenses-list"
  >
    <div
      className="display-on-mobile"
    >
      Expenses
    </div>
    <div
      className="display-on-desktop"
    >
      Expense
    </div>
    <div
      className="display-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="expenses-list__content"
  >
    <p
      className="expenses-list--no-expenses"
    >
      No Expenses
    </p>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="expenses-list"
  >
    <div
      className="display-on-mobile"
    >
      Expenses
    </div>
    <div
      className="display-on-desktop"
    >
      Expense
    </div>
    <div
      className="display-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="expenses-list__content"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
